Màj RaisonClient.java